# lnsModRoute-260120

./: .gitignore  ALNS_ALGORITHM_DETAILED_REPORT.md  ALNS_CORE_FEATURES_ANALYSIS.md  ANALYSIS_REPORT.md  API_IMPLEMENTATION_VERIFICATION.md  CALCULATION_TIME_SCENARIO.md  CMakeLists.txt  MATRIX_OPTIMIZATION_ANALYSIS.md  OD_STRATEGY_COMPARISON_REPORT.md  ONBOARD_WAITING_MATRIX_INEFFICIENCY.md  OPTIMIZE_API_ALNS_VERIFICATION.md  README.md  ROUTE_STABILITY_ANALYSIS.md  STATIC_VS_DYNAMIC_ROUTING_ANALYSIS.md  lnsmodroute.yaml
docker/: Dockerfile
include/: costCache.h  eurekaClient.h  jni_modroute.h  lib_modroute.h  lnsModRoute.h  main_utility.h  modState.h  mod_parameters.h  queryOsrmCost.h  queryValhallaCost.h  requestLogger.h  threadPool.h
include/gason/: gason.h
java/: README.md  pom.xml
java/src/main/java/com/ciel/microservices/dispatch_engine_service/mod_route/: AlgorithmParameters.java  DemandAction.java  Location.java  ModDispatchSolution.java  ModRequest.java  ModRoute.java  ModRouteConfiguration.java  ModRouteEngine.java  ModVehicleRoute.java  NewDemand.java  OnboardDemand.java  OnboardWaitingDemand.java  OptimizeType.java  RouteType.java  TimeWindow.java  VehicleAssigned.java  VehicleLocation.java
java/src/test/java/com/ciel/microservices/dispatch_engine_service/mod_route/: ModRouteEngineTest.java
python/: .gitignore  README.md  setup.py
python/mod_route/: __init__.py
src/: costCache.cc  jni_modroute.cc  lib_modroute.cc  lnsModRoute.cc  main.cc  main_utility.cc  py_modroute.cc  queryOsrmCost.cc  queryValhallaCost.cc  requestLogger.cc  test_modroute.cc  threadPool.cc
tests/: cmp_query1.cc  cmp_query2.cc  cmp_query3.cc  cmp_query4.cc  test_costCache.cc  test_query.cc  test_utility.cc  test_utility.h
